# master_tempo

./: .gitignore  CMakeLists.txt  README.md
src/: Main.cpp  MainComponent.cpp  MainComponent.h  dsp_processing.cpp  loopback_glue.cpp  ui_layout.cpp  ui_setup.cpp
src/dsp/: BeatTracker.h  OnsetDetector.h  TempoEstimator.h
src/win/: WASAPILoopback.h
